* changes v5.0.0 -> v5.0.1

##
## Features
##

- Added support to use --stdout in brain-client mode
- Added new option --stdin-timeout-abort, to set how long hashcat should wait for stdin input before aborting

##
## Algorithms
##

- Added pure kernels for hash-mode 11700 (Streebog-256)
- Added pure kernels for hash-mode 11800 (Streebog-512)
- Added hash-mode 18200 (Kerberos 5 AS-REP etype 23)
- Added hash-mode 11850 (HMAC-Streebog-512 (key = $pass), big-endian)

##
## Improvements
##

- Memory: Reduced default maximum bitmap size from 24 to 18 and give a notice to use --bitmap-max to restore
- Memory: Limit maximum host memory to allocate depending on bitness
- Tests: Added hash-mode 11700 (Streebog-256)
- Tests: Added hash-mode 11800 (Streebog-512)
- Tests: Added hash-mode 11850 (HMAC-Streebog-512 (key = $pass), big-endian)

##
## Bugs
##

- Fixed calculation of brain-attack if a given wordlist has the size zero
- Fixed automated calculation of brain-session when not using all hashes in the hashlist
- Fixed endianness and invalid separator character in outfile format for hash-mode 16801 (WPA-PMKID-PMK)
- Fixed ignoring --brain-client-features configuration when brain-server has attack positions information from a previous run
- Fixed missing call to WSACleanup() to cleanly shutdown windows sockets system
- Fixed missing call to WSAStartup() and client indexing in order to start the brain server on Windows
- Fixed checking the length of the last token in a hash if it was given the attribute TOKEN_ATTR_FIXED_LENGTH
- Fixed out-of-bounds write in short-term memory of the brain-server

* changes v4.2.1 -> v5.0.0

##
## Features
##

- Added new option --slow-candidates which allows hashcat to generate passwords on-host
- Added new option --brain-server to start a hashcat brain server
- Added new option --brain-client to start a hashcat brain client, automatically activates --slow-candidates